전반적인 초안

--- a/Asc/Views/Home/Index.cshtml
+++ b/Asc/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
     ViewData["Title"] = "Home Page";
 }
 
-<!-- ##### Welcome Area Start MainPage##### -->
+<!-- ##### Welcome Area Start 인삿말##### -->
 <section class="hero-section fullwidth-header" id="home" style="padding-bottom:50px !important;">
 
     <!-- Hero Content -->
@@ -15,7 +15,7 @@
                 <!-- Welcome Content -->
                 <div class="text-box">
                     <div>
-                        <h1 class="font-content-bold" style="color:#0062FF; font-size:50px;">AI혁신의 대가</h1>
+                        <h1 class="font-content-bold" style="color:#0062FF; font-size:50px;">AI혁신의 DNA</h1>
                         <h2 class="font-content-bold" style="color:white;">안녕하세요 ASC입니다.</h2>
                         <h5 class="font-content-mid" style="color:white;">4차 산업 혁명 이제는 막을 수 없습니다.</h5>
                         <h6 class="font-content-thin" style="color:white;">막을 수 없다면 받아들여야 합니다. ASC는 AI컨설팅을 통해 여러분을 돕겠습니다.</h6>
@@ -26,7 +26,7 @@
     </div>
 </section>
 <!-- ##### Welcome Area End ##### -->
-<!-- ##### Welcome Area Start MainPage##### -->
+<!-- ##### Welcome Area Start 스마트팩토리 소개##### -->
 <section class="hero-section full-width-main" id="home-2" style="padding-bottom:50px !important;">
 
     <!-- Hero Content -->
@@ -40,9 +40,8 @@
                 <div class="text-box2">
                     <div>
                         <h1 class="font-content-bold" style="color:#009cff; font-size:50px;">SMART FACTORY</h1>
-                        <h2 class="font-content-bold" style="color:white;">음</h2>
-                        <h5 class="font-content-mid" style="color:white;">4차 산업 혁명 이제는 막을 수 없습니다.</h5>
-                        <h6 class="font-content-thin" style="color:white;">막을 수 없다면 받아들여야 합니다. ASC는 AI컨설팅을 통해 여러분을 돕겠습니다.</h6>
+                        <h2 class="font-content-bold" style="color:white;">업종별 제조공장을 위한 지능형 클라우드 기반</h2>
+                        <h2 class="font-content-bold" style="color:white;">스마트공장 플랫폼 구축</h2>
                     </div>
                 </div>
             </div>
@@ -50,18 +49,15 @@
     </div>
 </section>
 <!-- ##### Welcome Area End ##### -->
-<!-- ##### Welcome Area Start MainPage##### -->
-<section class="hero-section full-width-main2" id="home-3" style="padding-bottom:50px !important;">
+<!-- ##### Welcome Area Start ai소개##### -->
+<!--<section class="hero-section full-width-main2" id="home-3" style="padding-bottom:50px !important;">-->
+<!-- Hero Content -->
+<!--<div class="hero-section-content">
 
-    <!-- Hero Content -->
-    <div class="hero-section-content">
-
-        <div class="container ">
-            <div class="row align-items-center">
-
-
-                <!-- Welcome Content -->
-                <div class="text-box3">
+    <div class="container ">
+        <div class="row align-items-center">-->
+<!-- Welcome Content -->
+<!--<div class="text-box3">
                     <div>
                         <h1 class="font-content-bold" style="color:#0062FF; font-size:50px;">AI</h1>
                         <h2 class="font-content-bold" style="color:white;">안녕하세요 ASC입니다.</h2>
@@ -72,62 +68,79 @@
             </div>
         </div>
     </div>
-</section>
-<!-- ##### Welcome Area End ##### -->
+</section>-->
+
 
 
 <div class="clearfix"></div>
-<div class="striples-bg">
-    <!-- Start what we do section1 -->
-    <section class="what-we-do section-padding-100-70" id="page1">
-        <div class="container">
-            <!-- Page Move Point -->
-            <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
-                 style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-                <span class="gradient-text blue">ABOUT</span>
-            </div>
+<!-- ##### Welcome Area End ##### -->
 
 
+<section class="hero-section full-width-main3" id="home-4" style="padding-bottom:50px !important;">
 
-            <div class="section-heading text-center">
+    <!-- Hero Content -->
+    <div class="hero-section-content">
+        <div class="container ">
+            <div><h1 class="font-content-bold wow fadeInUp" data-wow-delay="0.2s" style="color:white; text-align:center; visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp; ">AI 프로그램 저작권</h1></div>
+            <div class="row align-items-center">
 
-                <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                    style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
-                    기업 소개
-                </h2>
-                <br>
-                <h5 class="wow fadeInUp font-content-mid" data-wow-delay="0.3s">전남지역 중소기업과 더불어 사는 세상을 만들어 가는 ASC입니다.</h5>
-                <div class="row align-items-center">
+                <div class="background-box">
 
-
-                    <div class="col-12 col-lg-12 img-size"><img src="templetes/asc/img/core-img-asc/intro.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s"></div>
+                    <div class="col-12 col-lg-4 img-size"><img src="templetes/asc/img/core-img-asc/right1.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s"></div>
+                    <div class="col-12 col-lg-4 img-size"><img src="templetes/asc/img/core-img-asc/right2.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s"></div>
+                    <div class="col-12 col-lg-4 img-size"><img src="templetes/asc/img/core-img-asc/right3.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s"></div>
 
                 </div>
+
             </div>
-
-
-
-
-
-
         </div>
-    </section>
-</div>
-<!-- End what we do section1 -->
-<!-- Start what we do section2 services -->
-<!-- Start what we do section2-2 -->
-<section class="what-we-do section-padding-100-70 ico-about-bg" id="page2_2">
+    </div>
+</section>
+<!-- ##### Welcome Area End ##### -->
+<!-- Start what we do section1 회사소개 -->
+<section class="what-we-do section-padding-100-70" id="page1" style="">
     <div class="container">
+        <!-- Page Move Point -->
         <div class="dream-dots justify-content-center wow fadeInUp" data-wow-delay="0.2s"
              style="visibility: visible; animation-delay: 0.2s; animation-name: fadeInUp;">
-            <span class="gradient-text blue">SERVICES</span>
+            <span class="gradient-text blue">ABOUT</span>
         </div>
+
+
+
+        <div class="section-heading text-center">
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                전남지역 중소기업과 더불어 사는 세상을 만들어 가는 ASC입니다.
+            </h2>
+            <br>
+          
+            <div class="row align-items-center">
+
+
+                <div class="col-12 col-lg-12 img-size"><img src="templetes/asc/img/core-img-asc/intro.png" alt="그림없음" class="wow fadeInUp" data-wow-delay="0.3s"></div>
+
+            </div>
+        </div>
+
+
+
+
+
+
+    </div>
+</section>
+<!-- End what we do section1 -->
+<!-- Start what we do section2-1 service smart factory-->
+<section class="what-we-do section-padding-100-70 ico-about-bg" id="page2_1">
+    <div class="container">
 
         @*page SMART FACTORY*@
         <div class="section-heading text-center" style="margin-top:100px;">
 
             <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
-                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;" id="page2_1">
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
                 SMART FACTORY
             </h2>
 
@@ -136,7 +149,7 @@
         <div class="row align-items-center">
 
             @*page SMART FACTORY1*@
-            
+
             <div class="col-12 col-lg-12 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="row" style="justify-content:center;">
                     <h1 class="font-sub-title-gothic">&nbsp;&nbsp;업종별 제조공장을 위한 지능형 클라우드 기반 스마트공장 플랫폼 구축&nbsp;&nbsp;</h1>
@@ -144,25 +157,33 @@
 
 
                 </div>
-        </div>
-
-        <div class="row align-items-center">
-            @*page SMART FACTORY2*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <img src="~/templetes/asc/img/core-img-asc/smart2.png" />
             </div>
 
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                <div class="content-box">
-                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;지능형 업종별 스마트공장&nbsp;&nbsp;</h1>
-                    <p class="font-content-gothic">전남지역/ 두개업종(식품/어업)/매출규모 50억 미만/B2C 업체를 대상으로 RPA 관리업무 자동화 및 지능형 설비예지보전을 구축하여 원가절감을 목표로 합니다.</p>
-                    <a href="templetes/asc/img/core-img-asc/asc_company.pdf" download="asc_company" class="wow fadeInUp" data-wow-delay="0.3s">상세 정보</a>
+            <div class="row align-items-center">
+                @*page SMART FACTORY2*@
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <img src="~/templetes/asc/img/core-img-asc/smart2.png" />
                 </div>
+
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <div class="content-box">
+                        <h1 class="font-sub-title-gothic">&nbsp;&nbsp;지능형 업종별 스마트공장&nbsp;&nbsp;</h1>
+                        <p class="font-content-gothic">전남지역/ 두개업종(식품/어업)/매출규모 50억 미만/B2C 업체를 대상으로 RPA 관리업무 자동화 및 지능형 설비예지보전을 구축하여 원가절감을 목표로 합니다.</p>
+                        <a href="templetes/asc/img/core-img-asc/asc_company.pdf" download="asc_company" class="wow fadeInUp" data-wow-delay="0.3s">상세 정보</a>
+                    </div>
+                </div>
+
+
             </div>
-
-
         </div>
+    </div>
+</section>
 
+<!-- End what we do section2-1 -->
+<!-- Start what we do section2-2 service 설비예지보존-->
+
+<section class="what-we-do section-padding-100-70 ico-about-bg" id="page2_2">
+    <div class="container">
         @*page CMS*@
         <div class="section-heading text-center" style="margin-top:100px;">
 
@@ -199,16 +220,68 @@
                     <p class="font-content-gothic">설비별 Data속성은 다음과 같이 ID와 데이터 속성을 저의하나, 2020년 12월 국제 표준의 CDD, ASS 등 가이드 예정</p>
                 </div>
             </div>
+
+            @*page CMS3*@
+            <div class="col-12 col-lg-12 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="row">
+                    <p class="font-content-gothic">식품 업종 표준 프로세스를 정립하고 축적된 데이터를 활용하여 영업, 자재, 생산, 공정, 설비, 품질 마스터 데이터 정확도를 향상시키며 엣지컴퓨터, IOT, 5G 등 데이터 포멧을 맞춰 개발 합니다.</p>
+                    <img src="~/templetes/asc/img/core-img-asc/cms3.png" />
+                </div>
+            </div>
+
+            @*page CMS4*@
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img-asc/edge1.png" />
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;Edge Computing&nbsp;&nbsp;</h1>
+                    <p class="font-content-gothic">센서를 이용하여 획득한 데이터(Sensor Data)를 인공지능으로 분석하여 주변상황을 인지(파악)하고, 상황인지 정보와 상황인지에 활용된 센서 데이터를 서버 또는 클라우드에 전달 후 학습되어진 데이터를 기반으로 예측 및 설비 고장을 방지합니다.</p>
+                </div>
+            </div>
+
+            <h1 class="font-sub-title-gothic">&nbsp;&nbsp;하드웨어 사양&nbsp;&nbsp;</h1>
+
+            <div class="col-12 col-lg-12 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <p class="font-content-gothic">
+                    o STM32F769NIH6 microcontroller(2Mbytes flash memory, 512+16+4 KBytes RAM, in BGA216 package), TCM Flash(16 Mbits)<br />
+                    o On-board ST-LINK/V2-1 supporting USB reenumeration capability<br />
+                    o USB ST-LINK functions: virtual COM port, mass storage, debug port<br />
+                    o 4" capacitive touch LCD display with MIPIR DSI connector<br />
+                    o SAI audio codec
+                    o Two audio line jacks, one for input and one for output<br />
+                    o Stereo speaker outputs<br />
+                    o Four ST MEMS microphones on DFSDM inputs<br />
+                    o Two push-buttons (user and reset)<br />
+                    o 512-Mbit Quad-SPI Flash memory<br />
+                    o 128-Mbit SDRAM<br />
+                    o Connector for microSD card<br />
+                    o Wi-Fi or Ext-EEP daughterboard connector<br />
+                    o USB OTG HS with Micro-AB connector<br />
+                    o Ethernet connector compliant with IEEE-802.3-2002<br />
+
+                    o Five power supply options:<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;- ST LINK/V2-1<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;- USB HS connector<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;- 5 V from RJ45 (Power Over Ethernet)<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;- 5 V from Arduino. or external connector<br />
+                    &nbsp;&nbsp;&nbsp;&nbsp;- USB charger<br />
+
+                    o Power Over Ethernet based on IEEE 802.3af(Powered Device, 48 V to 5 V, 3 W)<br />
+                    o Power supply output for external applications: 3.3 V or 5 V<br />
+                    o Arduino. Uno V3 connectors<br />
+                    o TI RS-485 (USART6 Router) and 3-pin(A+, B-, GND) connector on board<br />
+                    o I2C(EXT/RF E2P Connector: PB8,PB9,3.3V,GND to 4-pin connector) Bridge On/Off on board<br />
+                </p>
+            </div>
+
         </div>
 
     </div>
+
 </section>
 
-
-
-
-
-
+<!-- End what we do section2-2 -->
 <!-- Start what we do section2-3 rpa -->
 
 <div class="striples-bg">
@@ -227,8 +300,6 @@
 
             </div>
             <div class="clearfix"></div>
-
-
 
             <div class="row align-items-center">
 
@@ -274,8 +345,6 @@
                     </div>
 
                 </div>
-
-
 
                 @*page RPA+BPO1*@
                 <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
@@ -331,7 +400,7 @@
 
                     @*page CHAT BOT1*@
                     <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
-                        <img src="~/templetes/asc/img/core-img-asc/chatbot.png" />
+                        <img src="~/templetes/asc/img/core-img-asc/chatbot2.jpg" />
                     </div>
                     <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                         <div class="content-box">
@@ -348,8 +417,91 @@
 </div>
 
 <!-- End what we do section2-3 -->
-<!-- End what we do section2 -->
-<!-- Start what we do section4 -->
+<!-- Start what we do section2-4 공정지능화-->
+
+<section class="what-we-do section-padding-100-70 ico-about-bg" id="page2_4">
+    <div class="container">
+
+        @*page 공정지능화*@
+        <div class="section-heading text-center" style="margin-top:100px;">
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                공정 지능화
+            </h2>
+
+        </div>
+
+        <div class="row align-items-center">
+
+            @*page 공정지능화1*@
+            <div class="row align-items-center">
+
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <div class="content-box">
+                        <h1 class="font-sub-title-gothic">&nbsp;&nbsp;쉽고 다양한 머신러닝 플랫폼 개발&nbsp;&nbsp;</h1>
+                        <p class="font-content-gothic">
+                            제조 현장에서 작업자가 긴 준비시간에 걸쳐 설비 제원(매개변수)을 설정하기 위한 시간과 비용이 요구됩니다.
+                            시간당 생산량 및 품질 기준의 균형을 맞추면서 설비에서 설정 가능한 제원의 최적값을 설정하는 것을 지금까지는 숙련된 작업자에게 의존했지만,
+                            최근 다품종 소량 생산에 대응하기 위한 모델 Change 시간을 단축하는 노력이 요구됩니다. 이에 AI를 활용한 설비 제원을 '강화 학습'시켜서 시간과 생산성 향상을 목표로 두고 있습니다.
+                        </p>
+
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <img src="~/templetes/asc/img/core-img-asc/mechanism1.png" />
+                </div>
+
+            </div>
+
+            @*page 공정지능화2*@
+            <div class="row align-items-center">
+
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <img src="~/templetes/asc/img/core-img-asc/factory1.jpg" />
+                </div>
+
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <div class="content-box">
+                        <h1 class="font-sub-title-gothic">&nbsp;&nbsp;적용분야&nbsp;&nbsp;</h1>
+                        <p class="font-content-gothic">- CNC설비를 통한 기계가공 및 정밀가공</p>
+                        <p class="font-content-gothic">- 사출기 설비를 통한 부품 성형</p>
+                        <p class="font-content-gothic">- 프레스 성형기둥 자동차 부품업체</p>
+                        <p class="font-content-gothic">- 금형 가공업체</p>
+
+                    </div>
+                </div>
+
+            </div>
+
+            @*page 공정지능화3*@
+            <div class="row align-items-center">
+
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <img src="~/templetes/asc/img/core-img-asc/mechanism2.png" />
+                </div>
+
+                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                    <div class="content-box">
+                        <h1 class="font-sub-title-gothic">&nbsp;&nbsp;자동 설정 AI를 도입하는 순서&nbsp;&nbsp;</h1>
+                        <h3 class="font-sub-title2-gothic">1. 판단 역할 AI의 작업</h3>
+                        <p class="font-content-gothic">상태 데이터 수집 자동화(IoT계 + 제어 장치 데이터계)와 데이터 자동 처리 AI 시행 평가인 보수 계산 자동화</p>
+                        <h3 class="font-sub-title2-gothic">2. 감독 역할 AI의 작업</h3>
+                        <p class="font-content-gothic">상태 보수를 분석해 어떻게 행동할지를 계산하는 방안을 '자동조정'이라고 합니다.</p>
+                        <h3 class="font-sub-title2-gothic">3. 희망 품질이나 처리 속도를 넣으면 설정 파라미터의 최적치를 자동 설정</h3>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </div>
+</section>
+
+<!-- End what we do section2-4 -->
+<!-- Start what we do section3 Contact-->
+
 <section class="what-we-do section-padding-100-70" id="page3">
     <div class="container">
         <div class="section-heading text-center">
