--- a/Asc/Views/Shared/_Layout.cshtml
+++ b/Asc/Views/Shared/_Layout.cshtml
@@ -113,16 +113,15 @@
         <div class="footer-content-area mt-0">
             <div class="container">
                 <div class="row ">
-                    <div class="col-12 col-lg-4 col-md-6">
+                    <div class="col-12 col-lg-6 col-md-6">
                         <div class="footer-copywrite-info">
                             <!-- Copywrite -->
                             <div class="copywrite_text fadeInUp" data-wow-delay="0.2s">
                                 <div class="footer-logo">
-                                    <a href="#">(주)AI SYSTEM CREATED</a>
+                                    <a href="#">(주)에이에스씨</a>
                                 </div>
                                 <p>
-                                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit ducimus voluptatibus
-                                    neque illo id repellat quisquam? Autem expedita earum quae laborum ipsum ad.
+                                    AI SYSTEM CREATED
                                 </p>
                             </div>
                             <!-- Social Icon -->
@@ -136,64 +135,15 @@
                         </div>
                     </div>
 
-                    <div class="col-12 col-lg-3 col-md-6">
-                        <div class="contact_info_area d-sm-flex justify-content-between">
-                            <!-- Content Info -->
-                            <div class="contact_info mt-x text-center fadeInUp" data-wow-delay="0.3s">
-                                <h5>PRIVACY & TOS</h5>
-                                <a href="">
-                                    <p>Advertiser Agreement</p>
-                                </a>
-                                <a href="">
-                                    <p>Acceptable Use Policy</p>
-                                </a>
-                                <a href="">
-                                    <p>Privacy Policy</p>
-                                </a>
-                                <a href="">
-                                    <p>Technology Privacy</p>
-                                </a>
-                                <a href="">
-                                    <p>Developer Agreement</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-                    <div class="col-12 col-lg-2 col-md-6 ">
-                        <!-- Content Info -->
-                        <div class="contact_info_area d-sm-flex justify-content-between">
-                            <div class="contact_info mt-s text-center fadeInUp" data-wow-delay="0.2s">
-                                <h5>NAVIGATE</h5>
-                                <a href="">
-                                    <p>Advertisers</p>
-                                </a>
-                                <a href="">
-                                    <p>Developers</p>
-                                </a>
-                                <a href="">
-                                    <p>Resources</p>
-                                </a>
-                                <a href="">
-                                    <p>Company</p>
-                                </a>
-                                <a href="">
-                                    <p>Connect</p>
-                                </a>
-                            </div>
-                        </div>
-                    </div>
-
-
-                    <div class="col-12 col-lg-3 col-md-6 ">
+                    <div class="col-12 col-lg-6 col-md-6 ">
                         <div class="contact_info_area d-sm-flex justify-content-between">
                             <!-- Content Info -->
                             <div class="contact_info mt-s text-center fadeInUp" data-wow-delay="0.4s">
                                 <h5>CONTACT US</h5>
-                                <p>Mailing Address:xx00 E. Union Ave</p>
-                                <p>Suite 1100. Denver, CO 80237</p>
-                                <p>+999 90932 627</p>
-                                <p>support@yourdomain.com</p>
+                                <p>고객센터:061-336-8445</p>
+                                <p>대표이사:이형근</p>
+                                <p>이메일:hglee@asc.kr</p>
+                                <p>문의메일:dome0730@asc.kr</p>
                             </div>
                         </div>
                     </div>
