회사다운로드

--- a/Asc/Views/Home/Index.cshtml
+++ b/Asc/Views/Home/Index.cshtml
@@ -168,8 +168,8 @@
                 <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                     <div class="content-box">
                         <h1 class="font-sub-title-gothic">&nbsp;&nbsp;지능형 업종별 스마트공장&nbsp;&nbsp;</h1>
-                        <p class="font-content-gothic">전남지역/ 두개업종(식품/어업)/매출규모 50억 미만/B2C 업체를 대상으로 RPA 관리업무 자동화 및 지능형 설비예지보전을 구축하여 원가절감을 목표로 합니다.</p>
-                        <a href="templetes/asc/img/core-img-asc/asc_company.pdf" download="asc_company" class="wow fadeInUp" data-wow-delay="0.3s">상세 정보</a>
+                        <p class="font-content-gothic">전남지역/ 두개업종(식품/어업)/매출규모 50억 미만/B2C 업체를 대상으로<br /> RPA 관리업무 자동화 및 지능형 설비예지보전을 구축하여 원가절감을 <br />목표로 합니다.</p>
+                        <a href="templetes/asc/img/core-img-asc/asc_company.pdf" download="asc_company2" class="wow fadeInUp" data-wow-delay="0.3s" style="font-size:25px;">회사소개서 다운로드</a>
                     </div>
                 </div>
 
