--- a/Asc/Views/Home/Index.cshtml
+++ b/Asc/Views/Home/Index.cshtml
@@ -115,7 +115,7 @@
                 전남지역 중소기업과 더불어 사는 세상을 만들어 가는 ASC입니다.
             </h2>
             <br>
-          
+
             <div class="row align-items-center">
 
 
@@ -203,6 +203,7 @@
                 <div class="content-box">
                     <h1 class="font-sub-title-gothic">&nbsp;&nbsp;설비예지보존&nbsp;&nbsp;</h1>
                     <p class="font-content-gothic">중소기업 스마트공장 관리 업무(MES운영)에서 설비 가동율 향상을 위해 사전 설비예방 관리로 설비 고장을 빅데이터 및 AI챗봇/AI스피커를 사용하여 비가동 감소를 목표로 하고 있습니다.</p>
+                    <a href="templetes/asc/img/core-img-asc/cms.pdf" download="cms" class="wow fadeInUp" data-wow-delay="0.3s" style="font-size:15px;">설비예지보존 카타로그</a>
                 </div>
             </div>
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
@@ -318,6 +319,10 @@
 
                         <p class="font-content-gothic">사람이 반복적으로 처리해야 하는 단순업무를 로봇 소프트웨어를 통해 자동화하는 솔루션. 인공지능 초입단계인 자동화 기술이고, 단순 프로그래밍보다 한 단계 더 복잡한 명령을 수행합니다.</p>
                         <p class="font-content-gothic">예를 들어 사람이 직접 여러 시스템에 접속해서 화면 별 값을 입력하고 엑셀로 작업하는 복합 작업을 그대로 따라할 수 있습니다. RPA 자동화는 데이터를 캡처하고, 애플리케이션을 실행하고, 응답을 트리거 하고, 다른 시스템과 통신하여 다양한 작업을 수행합니다.</p>
+                        <a href="templetes/asc/img/core-img-asc/rpa.pdf" download="RPA" class="wow fadeInUp" data-wow-delay="0.3s" style="font-size:15px;">RPA 카타로그</a>
+                        <a href="templetes/asc/img/core-img-asc/rpa_bpo.pdf" download="RPA-BPO" class="wow fadeInUp" data-wow-delay="0.3s" style="font-size:15px;">RPA-BPO 카타로그</a>
+                        <a href="templetes/asc/img/core-img-asc/rpa-ai.pdf" download="RPA-AI" class="wow fadeInUp" data-wow-delay="0.3s" style="font-size:15px;">판매예측 AI시스템</a>
+
                     </div>
                 </div>
 
@@ -445,7 +450,7 @@
                             시간당 생산량 및 품질 기준의 균형을 맞추면서 설비에서 설정 가능한 제원의 최적값을 설정하는 것을 지금까지는 숙련된 작업자에게 의존했지만,
                             최근 다품종 소량 생산에 대응하기 위한 모델 Change 시간을 단축하는 노력이 요구됩니다. 이에 AI를 활용한 설비 제원을 '강화 학습'시켜서 시간과 생산성 향상을 목표로 두고 있습니다.
                         </p>
-
+            
                     </div>
                 </div>
                 <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
@@ -500,6 +505,83 @@
 </section>
 
 <!-- End what we do section2-4 -->
+<!-- Start what we do section2-5 에너지관리시스템-->
+
+<section class="what-we-do section-padding-100-70 ico-about-bg" id="page2_4">
+    <div class="container">
+
+        @*page 에너지관리시스템*@
+        <div class="section-heading text-center" style="margin-top:100px;">
+
+            <h2 class="wow fadeInUp font-content-bold" data-wow-delay="0.3s"
+                style="visibility: visible; animation-delay: 0.3s; animation-name: fadeInUp;">
+                에너지 관리 시스템
+            </h2>
+
+        </div>
+
+
+
+        @*page 에너지관리시스템1*@
+        <div class="row align-items-center">
+
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;EMS(Energy Management System)&nbsp;&nbsp;</h1>
+                    <p class="font-content-gothic">
+                        정보통신 기술(ICT)을 이용해 에너지 사용 상황을 최적으로 파악하고 관리해 비효율적인 에너지 사용을 줄임으로써 능동적으로 에너지 관리를 가능하게 하는 시스템을 EMS라고 합니다.
+                    </p>
+
+                </div>
+            </div>
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img-asc/ems.jpg" />
+            </div>
+
+        </div>
+
+        @*page 에너지관리시스템2*@
+        <div class="row align-items-center">
+
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <img src="~/templetes/asc/img/core-img-asc/ems.png" />
+            </div>
+
+            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <div class="content-box">
+                    <h1 class="font-sub-title-gothic">&nbsp;&nbsp;에너지관리 솔루션&nbsp;&nbsp;</h1>
+                    <p class="font-content-gothic">공장 전체 또는 라인, 단위 설비별로 전력소모량을 측정하고 가동률을 분석해 효율적인 에너지 관리가 가능합니다.</p>
+                    <p class="font-content-gothic">- 실시간 에너지 사용 현황 모니터링</p>
+                    <p class="font-content-gothic">- 일/월 연간 에너지 사용현황 분석</p>
+                    <p class="font-content-gothic">- 단위설비/라인/공장 전체 전력 소모량</p>
+                    <p class="font-content-gothic">- 단위 설비별 가동률 분석</p>
+                </div>
+            </div>
+
+        </div>
+
+        @*page 에너지관리시스템3*@
+    <div class="row align-items-center">
+        <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+            <div class="content-box">
+                <h1 class="font-sub-title-gothic">&nbsp;&nbsp;다양한 기능 제공&nbsp;&nbsp;</h1>
+                <p class="font-content-gothic">- Web server 지원으로 원하는 장소에서 모니터링</p>
+                <p class="font-content-gothic">- 사용자가 원하는 대로 화면을 구성</p>
+                <p class="font-content-gothic">- 미리 작성된 Graph Dashboard</p>
+                <p class="font-content-gothic">- 미리 작성된 Energy Dashboard</p>
+                <p class="font-content-gothic">- 간단한 보고서 작성</p>
+                <p class="font-content-gothic">- 일정별 보고서 작성하여 자동으로 이메일 발송</p>
+                <p class="font-content-gothic">- 지능형 설비고장 챗봇 시스템</p>
+            </div>
+        </div>
+        <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+            <img src="~/templetes/asc/img/core-img-asc/ems2.png" />
+        </div>
+    </div>
+    </div>
+</section>
+
+<!-- End what we do section2-5 -->
 <!-- Start what we do section3 Contact-->
 
 <section class="what-we-do section-padding-100-70" id="page3">
@@ -549,4 +631,4 @@
 
     </div>
 </section>
-<!-- End what we do section4 -->
+<!-- End what we do section3 -->
