--- a/Asc/Views/Shared/_Layout.cshtml
+++ b/Asc/Views/Shared/_Layout.cshtml
@@ -87,8 +87,9 @@
                                         <li><a href="#page2_2" class="font-nav-sub">설비예지보전</a></li>
                                         <li><a href="#page2_3" class="font-nav-sub">계획자동화</a></li>
                                         <li><a href="#page2_4" class="font-nav-sub">공정지능화</a></li>
-                                        <li><a href="#" class="font-nav-sub">검사지능화</a></li>
-                                        <li><a href="#" class="font-nav-sub">설계지능화</a></li>
+                                        <li><a href="#page2_5" class="font-nav-sub">에너지관리시스템</a></li>
+                                        @*<li><a href="#" class="font-nav-sub">검사지능화</a></li>
+        <li><a href="#" class="font-nav-sub">설계지능화</a></li>*@
                                     </ul>
                                   
                                 </li>
