내용 임시 수정

--- a/Asc/Views/Home/Index.cshtml
+++ b/Asc/Views/Home/Index.cshtml
@@ -150,14 +150,14 @@
 
             @*page SMART FACTORY1*@
 
-            <div class="col-12 col-lg-12 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+            @*<div class="col-12 col-lg-12 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="row" style="justify-content:center;">
                     <h1 class="font-sub-title-gothic">&nbsp;&nbsp;업종별 제조공장을 위한 지능형 클라우드 기반 스마트공장 플랫폼 구축&nbsp;&nbsp;</h1>
                     <img src="~/templetes/asc/img/core-img-asc/smart1.png" />
 
 
                 </div>
-            </div>
+            </div>*@
 
             <div class="row align-items-center">
                 @*page SMART FACTORY2*@
@@ -199,7 +199,7 @@
         <div class="row align-items-center">
 
             @*page CMS1*@
-            <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+          @*  <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <div class="content-box">
                     <h1 class="font-sub-title-gothic">&nbsp;&nbsp;설비예지보존&nbsp;&nbsp;</h1>
                     <p class="font-content-gothic">중소기업 스마트공장 관리 업무(MES운영)에서 설비 가동율 향상을 위해 사전 설비예방 관리로 설비 고장을 빅데이터 및 AI챗봇/AI스피커를 사용하여 비가동 감소를 목표로 하고 있습니다.</p>
@@ -208,7 +208,7 @@
             </div>
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                 <img src="~/templetes/asc/img/core-img-asc/cms.png" />
-            </div>
+            </div>*@
 
             @*page CMS2*@
             <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
@@ -309,13 +309,13 @@
                 <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                     <img src="~/templetes/asc/img/core-img-asc/rpa.jpg" />
                 </div>
-                <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
+                <!--<div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-left">
                     <div class="content-box">
                         <div class="sub-title">
-                            <h1 class="font-sub-title-gothic">&nbsp;RPA(Robotic Process Automation)&nbsp;</h1>
+                            <h1 class="font-sub-title-gothic">&nbsp;RPA(Robotic Process Automation)&nbsp;</h1>-->
 
                             @*<button>더보기</button>*@
-                        </div>
+                        <!--</div>
 
                         <p class="font-content-gothic">사람이 반복적으로 처리해야 하는 단순업무를 로봇 소프트웨어를 통해 자동화하는 솔루션. 인공지능 초입단계인 자동화 기술이고, 단순 프로그래밍보다 한 단계 더 복잡한 명령을 수행합니다.</p>
                         <p class="font-content-gothic">예를 들어 사람이 직접 여러 시스템에 접속해서 화면 별 값을 입력하고 엑셀로 작업하는 복합 작업을 그대로 따라할 수 있습니다. RPA 자동화는 데이터를 캡처하고, 애플리케이션을 실행하고, 응답을 트리거 하고, 다른 시스템과 통신하여 다양한 작업을 수행합니다.</p>
@@ -324,7 +324,7 @@
                         <a href="templetes/asc/img/core-img-asc/rpa-ai.pdf" download="RPA-AI" class="wow fadeInUp" data-wow-delay="0.3s" style="font-size:15px;">판매예측 AI시스템</a>
 
                     </div>
-                </div>
+                </div>-->
 
                 @*page STT*@
                 <div class="col-12 col-lg-6 offset-lg-0 col-md-12 no-csstransitions no-padding-right">
